--- a/analytics-android-sample-app/src/main/res/layout/activity_main.xml
+++ b/analytics-android-sample-app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
   ~ SOFTWARE.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,11 +30,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.segment.android.sample.MainActivity">
 
-  <TextView
-      android:text="@string/hello_world"
-      android:layout_width="wrap_content"
+  <Button
+      android:id="@+id/action_track_a"
+      android:text="@string/track_button_a"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+  <Button
+      android:id="@+id/action_track_b"
+      android:text="@string/track_button_b"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
+
+</LinearLayout>
