--- a/analytics-android-sample-app/src/main/res/values/styles.xml
+++ b/analytics-android-sample-app/src/main/res/values/styles.xml
@@ -24,9 +24,6 @@
 
 <resources>
 
-  <!-- Base application theme. -->
-  <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-    <!-- Customize your theme here. -->
-  </style>
+  <style name="AppTheme" parent="android:Theme.Light"/>
 
 </resources>
