--- a/analytics-android-sample-app/src/main/res/menu/main.xml
+++ b/analytics-android-sample-app/src/main/res/menu/main.xml
@@ -27,8 +27,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.segment.android.sample.MainActivity">
 
-  <item android:id="@+id/action_docs"
-      android:title="@string/link_docs"
-      android:orderInCategory="100"/>
+  <item android:id="@+id/action_view_docs"
+      android:title="@string/action_view_docs"
+      android:orderInCategory="100"
+      android:showAsAction="never"/>
 
 </menu>
