Smaller queueSize for delegates

--- a/sample-app/src/main/res/values/analytics.xml
+++ b/sample-app/src/main/res/values/analytics.xml
@@ -29,4 +29,7 @@
 
   <!--Whether to print additional debug information as you develop.-->
   <bool name="analytics_debug">true</bool>
+
+  <!--Size of the queue.-->
+  <integer name="analytics_queue_size">5</integer>
 </resources>
