--- a/sample-app/src/main/res/layout/activity_main.xml
+++ b/sample-app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
       android:paddingTop="@dimen/activity_vertical_margin"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:orientation="vertical"
-      tools:context="com.segment.android.sample.MainActivity">
+      tools:context="com.segment.analytics.sample.MainActivity">
 
     <Button
         android:id="@+id/action_track_a"
