--- a/wear-sample/src/main/res/layout/round_activity_main.xml
+++ b/wear-sample/src/main/res/layout/round_activity_main.xml
@@ -22,18 +22,10 @@
     tools:context=".MainActivity"
     tools:deviceIds="wear_round">
 
-  <TextView
-      android:id="@+id/text"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:layout_centerVertical="true"
-      android:text="@string/app_name"/>
-
-  <TextView
-      android:id="@+id/hello"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      style="?android:buttonBarButtonStyle"
-      android:text="@string/say_hello"/>
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/logo"
+      android:src="@drawable/icon"
+      android:scaleType="center"/>
 </RelativeLayout>
