--- a/sample-app/src/main/res/layout/activity_main.xml
+++ b/sample-app/src/main/res/layout/activity_main.xml
@@ -118,12 +118,17 @@
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/stat_event_count"
+        android:id="@+id/stat_flushed_events"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/stat_flush_count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/integration_event_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
