Add flush interval option. Deprecate maxQueueSize for queueSize.

--- a/sample-app/src/main/res/values/analytics.xml
+++ b/sample-app/src/main/res/values/analytics.xml
@@ -32,4 +32,7 @@
 
   <!--Size of the queue.-->
   <integer name="analytics_queue_size">5</integer>
+
+  <!--Flush Interval in seconds.-->
+  <integer name="analytics_flush_interval">10</integer>
 </resources>
