--- a/sample-app/src/main/res/values/analytics.xml
+++ b/sample-app/src/main/res/values/analytics.xml
@@ -28,7 +28,7 @@
   <string name="analytics_write_key">l8v1ga655b</string>
 
   <!--Whether to print additional log information as you develop.-->
-  <bool name="analytics_logging">true</bool>
+  <bool name="analytics_debugging">true</bool>
 
   <!--Size of the queue.-->
   <integer name="analytics_queue_size">5</integer>
