--- a/analytics-wear-sample/src/main/res/layout/rect_activity_main.xml
+++ b/analytics-wear-sample/src/main/res/layout/rect_activity_main.xml
@@ -28,5 +28,7 @@
       android:layout_height="match_parent"
       android:id="@+id/logo"
       android:src="@drawable/icon"
-      android:scaleType="center"/>
+      android:scaleType="center"
+      tools:ignore="ContentDescription"/>
+  
 </LinearLayout>
